# rcin

./: Cargo.toml  README.md  test.txt
src/: lib.rs
tests/: smoke.rs
