[package]
name = "rcin"
version = "0.2.0"
authors = ["dranikpg"]
license="MIT"
edition = "2018"

description="Simple rust input streams"
keywords=["input"]

repository="https://github.com/dranikpg/rcin"
homepage="https://github.com/dranikpg/rcin"
readme = "README.md"

[dependencies]
lazy_static = "^1.4.0"
